styles/main.css
@media (max-width: 767px) {
	body {
		padding: 1px;
		margin: 0;
		background: #F6F6F8;
		font-family: 'Roboto', 'Arial', sans-serif; 
		font-size: 16px;
	}

	.blue_gradient {
		position: absolute;
		z-index: -1;
		top: 0;
		left: 0;
		width: 100%;
		height: 500px;
		background: white,
		-webkit-linear-gradient(#637E9E, #426082);
		background: -o-linear-gradient(#637E9E, #426082);
		background: linear-gradient(#637E9E, #426082);
	}

	.gray {
		position: absolute;
		top: 500px;
		z-index: -1;
		background: #F6F6F8;
		width: 100%;
		height: 500px;
	}

	.phones_div {
		display: block;
		height: 90%;
		width: 70%;
		margin: 320px auto 0 auto;
	}

	.phones {
		display: block;
		width: 100%;
		margin: 0 auto;
	}

	.content_div {
		width: 90%;
		height: 500px;
		margin: 50px auto;
	}

	.logo_banner {
		width: 90%;
		margin: 0px auto;
	}

	.logo_banner img {
		position: absolute;
		top: 65px;
		left: 15%;
		width: 70%;
	}

	.logo_banner button {
		position: absolute;
		width: 80%;
		top: 160px;
		left: 10%;
		padding: 30px 0 30px 30px;
		border: 1px solid #3f5f7f;
		border-radius: 3px;
		background: -webkit-linear-gradient(#7791AD, #517295);
		background: -o-linear-gradient(#7791AD, #517295);
		background: linear-gradient(#7791AD, #517295D);
		color: #F5F6F8;
		font-size: 1.5em;
		font-weight: 500;
		text-shadow: 0 1px 1px #3B5A7D;
		box-shadow: 0 0 4px #3f5f7f;
	}

	.logo_banner button:hover {
		box-shadow: none;
		background: -webkit-linear-gradient(#87a1bD, #517295);
		background: -o-linear-gradient(#87a1bD, #517295);
		background: linear-gradient(#87a1bD, #517295D);
	}

	.logo_banner button:active {
		outline: none;
		box-shadow: inset 0 0 3px #2f4f6f;
		background: -webkit-linear-gradient(#517295, #7791AD);
		background: -o-linear-gradient(#517295, #7791AD);
		background: linear-gradient(#517295, #7791AD);
		border: none;
	}

	.logo_banner button:focus {
		outline: none;
	}

	.logo_banner button img {
		position: absolute;
		top: 34px;
		left: 34%;
		width: 4%;
		min-width: 20px;
	}

	.about {
		width: 100%;
		height: 300px;
		background: url("../images/frame.png") no-repeat;
		background-position: top center;
		background-size: contain;
	}

	.text_container {
		width: 80%;
		min-width: 297px;
		margin: 0 auto;
	}

	h1 {
		width: 80%;
		margin: 0 auto; 
		padding: 35px 0 0 0;
		font-family: 'Montserrat', 'Roboto', Arial, sans-serif;
		font-size: 1.4em;
		font-weight: 500;
		line-height: 1.3em;
		color: #334f73;
	}

	p {
		width: 80%;
		margin: 25px auto;
		font-family: 'Roboto', Arial, sans-serif;
		line-height: 1.8em;
	}

	p.last {
		margin: 0 auto 35px auto;
	}

	.badge {
		display: block;
		margin: 0 auto;
		width: 50%;
	}

	.badge.smaller {
		padding-top: 10px;
		width: 50%;
	}

	.badge img {
		width: 100%;
	}

	footer {
		clear: both;
		width: 100%;
		height: 100px;
		padding: 120px 0 0 0;
	}

	nav {
		clear: both;
		width: 100%;
		margin: 0 auto;
		padding: 0 0 0 0;
	}

	nav ul {
		display: block;
		width: 100%;
		margin: 0 auto;
		padding: 0;
	}

	nav ul li {
		display: block;
		list-style: none;
		width: 100%;
		text-align: center;
		margin: 20px auto;
		padding: 10px 0 10px 0;
		text-transform: uppercase;
		font-family: 'Montserrat', 'Roboto', 'Arial', sans-serif;
		font-size: 2.2em;
		font-weight: 500;
		letter-spacing: 0.05em;
		color: #B4B4B4;
		border-top: 1px solid #637E9E;
		border-bottom: 1px solid #637E9E;
	}

	nav ul li a {
		width: 100%;
		text-decoration: none;
		color: #5B799A;
	}

	.copyright {
		padding: 25px 0;
		font-size: 0.8em;
		border-top: none;
		border-bottom: none;
	}
}
/* ... */

